@@ -12,6 +12,7 @@
 #include <string.h>
 #include <errno.h>
 #include <limits.h>
+#include <ctype.h>
 #include <sys/types.h>
 #include <sys/stat.h>
 #include <getopt.h>
@@ -24,14 +25,15 @@
 #include "sg_lib.h"
 
 
-static char * version_str = "1.02 20110209";
+static char * version_str = "1.03 20110310";
 
-#define MAX_SENSE_LEN (256 + 8) /* max descriptor format currently */
+#define MAX_SENSE_LEN 1024 /* max descriptor format actually: 256+8 */
 
 static struct option long_options[] = {
     {"binary", required_argument, 0, 'b'},
     {"file", required_argument, 0, 'f'},
     {"help", no_argument, 0, 'h'},
+    {"nospace", no_argument, 0, 'n'},
     {"status", required_argument, 0, 's'},
     {"verbose", no_argument, 0, 'v'},
     {"version", no_argument, 0, 'V'},
@@ -44,12 +46,14 @@ struct opts_t {
     const char * fname;
     int do_file;
     int do_help;
+    int no_space;
     int do_status;
     int sstatus;
     int do_verbose;
     int do_version;
     const char * wfname;
     unsigned char sense[MAX_SENSE_LEN + 4];
+    const char * no_space_str;
     int sense_len;
 };
 
@@ -58,9 +62,10 @@ static void
 usage()
 {
   fprintf(stderr, "Usage: "
-          "sg_decode_sense [--binary=FN] [--file=FN] [--help] [--status=SS]\n"
-          "                       [--verbose] [--version] [--write=WFN] "
-          "[H1 H2 H3 ...]\n"
+          "sg_decode_sense [--binary=FN] [--file=FN] [--help] [--nospace]\n"
+          "                       [--status=SS] [--verbose] [--version] "
+          "[--write=WFN]\n"
+          "                       [H1 H2 H3 ...]\n"
           "  where:\n"
           "    --binary=FN|-b FN     FN is a file name to read sense "
           "data in\n"
@@ -71,6 +76,9 @@ usage()
           "                          in ASCII hexadecimal. Interpret '-' "
           "as stdin\n"
           "    --help|-h             print out usage message\n"
+          "    --nospace|-n          no spaces or other separators between "
+          "pairs of\n"
+          "                          hex digits (e.g. '3132330A')\n"
           "    --status=SS |-s SS    SCSI status value in hex\n"
           "    --verbose|-v          increase verbosity\n"
           "    --version|-V          print version string then exit\n"
@@ -89,13 +97,13 @@ static int
 process_cl(struct opts_t *optsp, int argc, char *argv[])
 {
     int c;
-    unsigned int ul;
+    unsigned int ui;
     char * opt;
     char *endptr;
     long val;
 
     while (1) {
-        c = getopt_long(argc, argv, "b:f:hs:vVw:", long_options, NULL);
+        c = getopt_long(argc, argv, "b:f:hns:vVw:", long_options, NULL);
         if (c == -1)
             break;
 
@@ -122,17 +130,20 @@ process_cl(struct opts_t *optsp, int argc, char *argv[])
         case '?':
             optsp->do_help = 1;
             return 0;
+        case 'n':
+            ++optsp->no_space;
+            break;
         case 's':
-            if (1 != sscanf(optarg, "%x", &ul)) {
+            if (1 != sscanf(optarg, "%x", &ui)) {
                 fprintf(stderr, "'--status=SS' expects a byte value\n");
                 return SG_LIB_SYNTAX_ERROR;
             }
-            if (ul > 0xff) {
+            if (ui > 0xff) {
                 fprintf(stderr, "'--status=SS' byte value exceeds FF\n");
                 return SG_LIB_SYNTAX_ERROR;
             }
             ++optsp->do_status;
-            optsp->sstatus = ul;
+            optsp->sstatus = ui;
             break;
         case 'v':
             ++optsp->do_verbose;
@@ -150,6 +161,16 @@ process_cl(struct opts_t *optsp, int argc, char *argv[])
 
     while (optind < argc) {
         opt = argv[optind++];
+        if (optsp->no_space) {
+            if (optsp->no_space_str) {
+                fprintf(stderr, "With '--nospace' only want a single string "
+                        "of hex digits, extra: '%s'\n", opt);
+                return SG_LIB_SYNTAX_ERROR;
+            } else {
+                optsp->no_space_str = opt;
+                continue;
+            }
+        }
         val = strtol(opt, &endptr, 16);
         if (*opt == '\0' || *endptr != '\0' || val < 0x00 || val > 0xff) {
             fprintf(stderr, "Invalid byte '%s'\n", opt);
@@ -168,10 +189,12 @@ process_cl(struct opts_t *optsp, int argc, char *argv[])
 
 /* Read hex numbers from file ('-' taken as stdin).
  * There should be either one entry per line, a comma separated list or
- * space separated list. Everything from and including a '#' on a line
+ * space separated list. If no_space is set then a string of hex digits
+ * is expected, 2 per byte. Everything from and including a '#' on a line
  * is ignored.  Returns 0 if ok, or 1 if error. */
-static int file2hex_arr(const char * fname, unsigned char * mp_arr,
-                        int * mp_arr_len, int max_arr_len)
+static int
+file2hex_arr(const char * fname, int no_space, unsigned char * mp_arr,
+             int * mp_arr_len, int max_arr_len)
 {
     int fn_len, in_len, k, j, m;
     unsigned int h;
@@ -221,38 +244,51 @@ static int file2hex_arr(const char * fname, unsigned char * mp_arr,
                     "line %d, pos %d\n", j + 1, m + k + 1);
             goto bad;
         }
-        for (k = 0; k < 1024; ++k) {
-            if (1 == sscanf(lcp, "%x", &h)) {
-                if (h > 0xff) {
-                    fprintf(stderr, "build_mode_page: hex number "
-                            "larger than 0xff in line %d, pos %d\n",
-                            j + 1, (int)(lcp - line + 1));
-                    goto bad;
-                }
-                if ((off + k) >= max_arr_len) {
-                    fprintf(stderr, "build_mode_page: array length "
-                            "exceeded\n");
+        if (no_space) {
+            for (k = 0; isxdigit(*lcp) && isxdigit(*(lcp + 1));
+                 ++k, lcp += 2) {
+                if (1 != sscanf(lcp, "%2x", &h)) {
+                    fprintf(stderr, "build_mode_page: bad hex number in li"
+                            "ne %d, pos %d\n", j + 1, (int)(lcp - line + 1));
                     goto bad;
                 }
                 mp_arr[off + k] = h;
-                lcp = strpbrk(lcp, " ,\t");
-                if (NULL == lcp)
-                    break;
-                lcp += strspn(lcp, " ,\t");
-                if ('\0' == *lcp)
-                    break;
-            } else {
-                if ('#' == *lcp) {
-                    --k;
-                    break;
-                }
-                fprintf(stderr, "build_mode_page: error in "
-                        "line %d, at pos %d\n", j + 1,
-                        (int)(lcp - line + 1));
-                goto bad;
             }
+            off += k;
+        } else {
+            for (k = 0; k < 1024; ++k) {
+                if (1 == sscanf(lcp, "%x", &h)) {
+                    if (h > 0xff) {
+                        fprintf(stderr, "build_mode_page: hex number "
+                                "larger than 0xff in line %d, pos %d\n",
+                                j + 1, (int)(lcp - line + 1));
+                        goto bad;
+                    }
+                    if ((off + k) >= max_arr_len) {
+                        fprintf(stderr, "build_mode_page: array length "
+                                "exceeded\n");
+                        goto bad;
+                    }
+                    mp_arr[off + k] = h;
+                    lcp = strpbrk(lcp, " ,\t");
+                    if (NULL == lcp)
+                        break;
+                    lcp += strspn(lcp, " ,\t");
+                    if ('\0' == *lcp)
+                        break;
+                } else {
+                    if ('#' == *lcp) {
+                        --k;
+                        break;
+                    }
+                    fprintf(stderr, "build_mode_page: error in "
+                            "line %d, at pos %d\n", j + 1,
+                            (int)(lcp - line + 1));
+                    goto bad;
+                }
+            }
+            off += (k + 1);
         }
-        off += (k + 1);
     }
     *mp_arr_len = off;
     fclose(fp);
@@ -266,11 +302,14 @@ bad:
 int
 main(int argc, char *argv[])
 {
+    int k;
     int ret = 0;
+    unsigned int ui;
     size_t s;
     struct opts_t opts;
     char b[2048];
     FILE * fp = NULL;
+    const char * cp;
 
     memset(&opts, 0, sizeof(opts));
     memset(b, 0, sizeof(b));
@@ -290,6 +329,17 @@ main(int argc, char *argv[])
     if (opts.do_status) {
         sg_get_scsi_status_str(opts.sstatus, sizeof(b) - 1, b);
         printf("SCSI status: %s\n", b);
+    }
+
+    if ((0 == opts.sense_len) && opts.no_space_str) {
+        cp = opts.no_space_str;
+        for (k = 0; isxdigit(cp[k]) && isxdigit(cp[k + 1]); k += 2) {
+            if (1 != sscanf(cp + k, "%2x", &ui)) {
+                fprintf(stderr, "bad no_space hex string: %s\n", cp);
+                return SG_LIB_SYNTAX_ERROR;
+            }
+            opts.sense[opts.sense_len++] = (unsigned char)ui;
+        }
     }
 
     if ((0 == opts.sense_len) && (! opts.do_binary) && (! opts.do_file)) {
@@ -325,8 +375,8 @@ main(int argc, char *argv[])
         }
         opts.sense_len = s;
     } else if (opts.do_file) {
-        ret = file2hex_arr(opts.fname, opts.sense, &opts.sense_len,
-                           MAX_SENSE_LEN);
+        ret = file2hex_arr(opts.fname, opts.no_space, opts.sense,
+                           &opts.sense_len, MAX_SENSE_LEN);
         if (ret) {
             fprintf(stderr, "unable to decode ASCII hex from file: %s\n",
                     opts.fname);
